force-app/main/default/objects/SAP_SalesOrgPlants__x/SAP_SalesOrgPlants__x.object-meta.xml
<CustomObject>
    <description>SAP_SalesOrgPlantsSet</description>
    <externalDataSource>SAP</externalDataSource>
    <externalName>SAP_SalesOrgPlantsSet</externalName>
    <label>SAP_SalesOrgPlants</label>
    <pluralLabel>SAP_SalesOrgPlantsSet</pluralLabel>
</CustomObject>