force-app/main/default/objects/SAP_SalesOrgPlants__x/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Vtweg</description>
    <externalDeveloperName>Vtweg</externalDeveloperName>
    <label>Distribution Channel</label>
    <length>2</length>
    <type>Text</type>
</CustomField>