force-app/main/default/objects/SAP_SalesOrgPlants__x/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <description>Vkorg</description>
    <externalDeveloperName>Vkorg</externalDeveloperName>
    <label>Sales Organization</label>
    <length>4</length>
    <type>Text</type>
</CustomField>