force-app/main/default/objects/SAP_SalesOrgPlants__x/fields/Vtweg__c.field-meta.xml
<CustomField>
    <fullName>Vtweg__c</fullName>
    <description>Vtweg</description>
    <externalDeveloperName>Vtweg</externalDeveloperName>
    <label>Vtweg</label>
    <length>2</length>
    <type>Text</type>
</CustomField>